# CFnat

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: release-notes-template.md
.github/workflows/: build-cli.yml  build-release.yml  build.yml  build_cli.yml
binaries/CLI/CLI_MacOS_AMD64/: CFnat
binaries/CLI/Linux_AMD64/: CFnat
binaries/CLI/Linux_ARM64/: CFnat
binaries/CLI/MacOS_ARM64/: CFnat
binaries/Linux_AMD64/: CFnat
binaries/Linux_AMD64_GNU/: CFnat
binaries/Linux_ARM64/: CFnat
binaries/Linux_ARM64_GNU/: CFnat
binaries/MacOS_AMD64/: CFnat
binaries/MacOS_ARM64/: CFnat
binaries/cli/cli_Linux_AMD64/: CFnat
binaries/cli/cli_Linux_ARM64/: CFnat
binaries/cli/cli_MacOS_AMD64/: CFnat
binaries/cli/cli_MacOS_ARM64/: CFnat
binaries/flutter_web/: flutter_bootstrap.js  index.html  main.dart.js  version.json
binaries/flutter_web/assets/: NOTICES
flutter/: flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/: .gitignore  local.properties
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/cfnat/manager/: MainActivity.kt
flutter/lib/: main.dart
flutter/lib/screens/: main_screen.dart
flutter/lib/services/: api_service.dart  app_service.dart  rust_service.dart  rust_service_web.dart
flutter/lib/widgets/: config_panel.dart  info_panel.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/rust/: Cargo.toml
flutter/rust/.cargo/: config.toml
flutter/rust/src/: lib.rs
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
old/: args.rs  ip.rs  pool.rs  utils.rs
src/: args.rs  backend.rs  config.rs  forward.rs  httping.rs  hyper.rs  ip.rs  lib.rs  loadbalancer.rs  log.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs  sse.rs
src/core/: backend.rs  cancel.rs  config.rs  forward.rs  httping.rs  hyper.rs  ip.rs  loadbalancer.rs  mod.rs  pool.rs  service.rs  types.rs  utils.rs
