[package]
name = "CFnat"
version = "1.0.0"
edition = "2024"

[lib]
name = "cfnat"
path = "src/lib.rs"

[[bin]]
name = "CFnat"
path = "src/bin/cfnat.rs"

[features]
default = []
web = ["axum", "tower-http", "rust-embed", "serde_json"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
hyper = { version = "1", features = ["client"], default-features = false }
rustls-pki-types = { version = "1", default-features = false }
hyper-util = { version = "0.1", features = ["client-legacy"], default-features = false }
hyper-rustls = { version = "0.27", features = ["ring", "webpki-roots", "http1"], default-features = false }
http = { version = "1", default-features = false }
tower-service = { version = "0.3", default-features = false }
parking_lot = "0.12"
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
rust-embed = { version = "8.0", optional = true }
tokio-stream = "0.1"